<resources>
    <string name="app_name">SafeChat</string>
    <string name="Username">USERNAME</string>
    <string name="Password">PASSWORD</string>
    <string name="register">REGISTER</string>
    <string name="login">Login</string>
    <string name="register_here">Register Here</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_no">Phone No.</string>
    <string name="email">Email</string>
    <string name="username">username</string>
    <string name="password">Password</string>
    <string name="textview">TextView</string>
    <string name="user_Name">Username</string>
</resources>
