<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.xyz.safechat.RegisterActivity">

    <EditText
        android:id="@+id/etusername"
        android:layout_width="345dp"
        android:layout_height="46dp"
        android:layout_alignLeft="@+id/etPhone"
        android:layout_alignStart="@+id/etPhone"
        android:layout_below="@+id/etLastName"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/etpassword"
        android:layout_width="342dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/etPhone"
        android:layout_alignStart="@+id/etPhone"
        android:layout_below="@+id/etEmail"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="84dp" />

    <Button
        android:id="@+id/bRegister"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:text="@string/register" />

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="345dp"
        android:layout_height="46dp"
        android:layout_alignEnd="@+id/etpassword"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/etpassword"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/etMiddleName"
        android:layout_width="345dp"
        android:layout_height="46dp"
        android:layout_alignLeft="@+id/etFirstName"
        android:layout_alignStart="@+id/etFirstName"
        android:layout_below="@+id/etFirstName"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/middle_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="345dp"
        android:layout_height="46dp"
        android:layout_alignLeft="@+id/etMiddleName"
        android:layout_alignStart="@+id/etMiddleName"
        android:layout_below="@+id/etMiddleName"
        android:ems="10"
        android:layout_marginTop="16dp"
        android:hint="@string/last_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="345dp"
        android:layout_height="46dp"
        android:layout_below="@+id/etusername"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/phone_no"
        android:inputType="phone" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="345dp"
        android:layout_height="46dp"
        android:layout_alignEnd="@+id/etpassword"
        android:layout_alignRight="@+id/etpassword"
        android:layout_below="@+id/etPhone"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />
</RelativeLayout>
